@@ -14,8 +14,8 @@
 .bad { color: red }
 </style>
 <title>tester</title></head><body>
-release: freeRouter v24.8.9-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-08-09 21:27:45, took 00:12:16, with 60 workers, on 631 cases, 0 failed, 0 traces, 0 retries<br/>
+release: freeRouter v24.8.10-cur, done by sprscc13@mrn0b0dy.<br/>
+tested: 2024-08-10 05:36:50, took 00:09:07, with 60 workers, on 631 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
